preformat static files

--- a/Online Shop/Index.html
+++ b/Online Shop/Index.html
@@ -114,12 +114,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
-
                     <li id="pl">
                         <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
                         <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
-
                     <li id="profil">
                         <div class="btn-group profil-btn">
                             <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -128,7 +126,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
                                 <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
                         </div>
@@ -156,7 +156,6 @@
                                 <input type="checkbox" aria-label="Checkbox for following text input">&nbsp; Naziv &nbsp;
                                 <input type="checkbox" aria-label="Checkbox for following text input">&nbsp; Grad &nbsp;
                                 <input type="checkbox" aria-label="Checkbox for following text input">&nbsp; Cena &nbsp;
-
                                 <div class="form-group">
                                     <label for="min-price">&nbsp;Min:</label>
                                     <input type="number" id="min-price" name="min-price" value="" />
@@ -171,17 +170,14 @@
                     </div>
                 </div>
             </div>
-
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mx-auto">
                         <h3 class="text-dark mt-4">Svi proizvodi</h3>
-                        
                     </div>
                 </div>
             </div>
         </main>
     </div>
-
 </body>
 </html>
