--- a/Online Shop/IzmenaProfila.html
+++ b/Online Shop/IzmenaProfila.html
@@ -86,7 +86,7 @@
                         $("#prezime").val(data.Prezime);
                         $("#pol").val(data.Pol);
                         $("#email").val(data.Email);
-                        
+
                         let today = new Date(data.DatumRodjenja);
 
                         let day = (today.getDate());
@@ -281,12 +281,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
-
                     <li id="pl">
                         <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
                         <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
-
                     <li id="profil">
                         <div class="btn-group profil-btn">
                             <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -295,7 +293,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
                                 <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
                         </div>
@@ -322,34 +322,31 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy</span>
                                                     </div>
-
                                                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ažuriranje korisničkog naloga</h5>
-
                                                     <div id="divgreske" class="alert alert-danger d-flex align-items-center" role="alert">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path stroke="none" d="M0 0h24v24H0z" fill="none" /> <path d="M12 19v.01" /> <path d="M12 15v-10" /> </svg>
+                                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                                            <path d="M12 19v.01" />
+                                                            <path d="M12 15v-10" />
+                                                        </svg>
                                                         <span id="greske">
-
                                                         </span>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="korisnickoime">Korisničko ime</label>
                                                         <input type="text" id="korisnickoime" autofocus class="form-control form-control-lg" required />
                                                         <span id="g1" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="ime">Ime</label>
                                                         <input type="text" id="ime" class="form-control form-control-lg" required />
                                                         <span id="g3" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="prezime">Prezime</label>
                                                         <input type="text" id="prezime" class="form-control form-control-lg" required />
                                                         <span id="g4" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="pol">Pol</label>
                                                         <select id="pol" class="form-control form-control-lg" required>
@@ -358,19 +355,16 @@
                                                             <option value="Drugo">Drugo</option>
                                                         </select>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="email">Email adresa</label>
                                                         <input type="email" id="email" class="form-control form-control-lg" required />
                                                         <span id="g5" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                     </div>
-
                                                     <div class="form-outline mb-4">
                                                         <label class="form-label" for="datumrodjenja" id="trenutni">Datum rođenja</label>
                                                         <input type="date" id="datumrodjenja" min="1970-01-01" max="2020-01-01" class="form-control form-control-lg" required />
                                                         <span id="g6" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
                                                     </div>
-
                                                     <p class="my-3 pb-lg-2 fw-bold text-danger">
                                                         Odabirom novog datuma rođenja, prethodni datum će biti prepisan novim!
                                                     </p>
@@ -378,7 +372,6 @@
                                                         <button class="btn btn-dark btn-lg btn-block" id="azurirajbtn" type="button">Sačuvaj izmene</button>
                                                     </div>
                                                 </form>
-
                                             </div>
                                         </div>
                                     </div>
