--- a/Online Shop/MojProfil.html
+++ b/Online Shop/MojProfil.html
@@ -135,7 +135,7 @@
                         }
                     }
                 });
-            });               
+            });
         });
     </script>
 </head>
@@ -150,12 +150,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
-
                     <li id="pl">
                         <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
                         <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
-
                     <li id="profil">
                         <div class="btn-group profil-btn">
                             <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -164,7 +162,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
                                 <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
                         </div>
@@ -191,38 +191,30 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy <span id="uloga"></span></span>
                                                     </div>
-
                                                     <h5 class="fw-normal mb-5 pb-2" style="letter-spacing: 1px;">Detalji i opcije Vašeg naloga</h5>
-
                                                     <div class="pt-1 mb-4">
                                                         <a href="IzmenaProfila.html" class="btn btn-dark btn-lg btn-block" id="izmenaprofila" type="button">Izmena profila</a>
                                                     </div>
-
                                                     <div id="kupacmeni">
                                                         <div class="pt-1 mb-4">
                                                             <a href="MojePorudzbine.html" class="btn btn-dark btn-lg btn-block" id="mojeporudzbine" type="button">Moje porudžbine</a>
                                                         </div>
-
                                                         <div class="pt-1 mb-4">
                                                             <a href="OmiljeniProizvodi.html" class="btn btn-dark btn-lg btn-block" id="omiljeniproizvodi" type="button">Omiljeni proizvodi</a>
                                                         </div>
                                                     </div>
-
                                                     <div id="prodavacmeni">
                                                         <div class="pt-1 mb-4">
                                                             <a href="MojiProizvodi.html" class="btn btn-dark btn-lg btn-block" id="mojiproizvodi" type="button">Moji proizvodi</a>
                                                         </div>
                                                     </div>
-
                                                     <div id="adminmeni">
                                                         <div class="pt-1 mb-4">
                                                             <a href="ListaKorisnika.html" class="btn btn-dark btn-lg btn-block" id="listakorisnika" type="button">Lista korisnika</a>
                                                         </div>
-
                                                         <div class="pt-1 mb-4">
                                                             <a href="ListaProizvoda.html" class="btn btn-dark btn-lg btn-block" id="listaproizvoda" type="button">Lista proizvoda</a>
                                                         </div>
-
                                                         <div class="pt-1 mb-4">
                                                             <a href="ListaPorudzbina.html" class="btn btn-dark btn-lg btn-block" id="listaporudzbina" type="button">Lista porudžbina</a>
                                                         </div>
