--- a/Online Shop/ListaKorisnika.html
+++ b/Online Shop/ListaKorisnika.html
@@ -120,18 +120,18 @@
                             if (k.Uloga == 0) uloga = "Kupac";
                             if (k.Uloga == 1) uloga = "Prodavac";
                             if (k.Uloga == 2) uloga = "Administrator";
-                            
+
                             $("#korisnici > tbody").append('<tr><td>' + k.KorisnickoIme + '</td>' +
-                                                            '<td>' + k.Ime + '</td>' +
-                                                            '<td>' + k.Prezime + '</td>' +
-                                                            '<td>' + k.Pol + '</td>' +
-                                                            '<td>' + k.Email + '</td>' +
-                                                            '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
-                                                            '<td><b>' + uloga.toUpperCase() + '</b></td>' +
-                                                            '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
-                                                            '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
+                                '<td>' + k.Ime + '</td>' +
+                                '<td>' + k.Prezime + '</td>' +
+                                '<td>' + k.Pol + '</td>' +
+                                '<td>' + k.Email + '</td>' +
+                                '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
+                                '<td><b>' + uloga.toUpperCase() + '</b></td>' +
+                                '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
+                                '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
                                 '</tr>');
-                        }); 
+                        });
                     });
                 }
             }
@@ -384,12 +384,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
-
                     <li id="pl">
                         <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
                         <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
-
                     <li id="profil">
                         <div class="btn-group profil-btn">
                             <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -398,7 +396,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
                                 <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
                         </div>
@@ -422,18 +422,13 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy Korisnici</span>
                                                     </div>
-
                                                     <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih korisnika registrovanih na Shopy platformu</h5>
-
                                                     <div class="pt-1 mb-3">
                                                         <a href="DodajProdavca.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje prodavca</a>
                                                     </div>
-
                                                     <br />
-
                                                     <h5 class="fw-semibold" style="letter-spacing: 1px;">Pretraga korisnika registrovanih na Shopy platformu</h5>
                                                     <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je korisnike pretražiti po jednom ili više kriterijuma. Ostavljanjem praznog polja, taj kriterijum se <b>NE PRIMENJUJE</b> na pretragu!</p>
-
                                                     <div class="col-12 mb-3">
                                                         <div class="row">
                                                             <div class="col-3">
@@ -448,21 +443,18 @@
                                                                     <input id="prezime" type="text" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
                                                                 </div>
                                                             </div>
-
                                                             <div class="col-2">
                                                                 <div class="input-group flex-nowrap mb-3">
                                                                     <span class="input-group-text" id="addon-wrapping">Od</span>
                                                                     <input id="od" type="date" min="1970-01-01" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
                                                                 </div>
                                                             </div>
-
                                                             <div class="col-2">
                                                                 <div class="input-group flex-nowrap mb-3">
                                                                     <span class="input-group-text" id="addon-wrapping">Do</span>
                                                                     <input id="do" type="date" min="1970-01-01" class="form-control" placeholder="Unesite pojam..." aria-label="prezime" aria-describedby="addon-wrapping">
                                                                 </div>
                                                             </div>
-
                                                             <div class="col-2">
                                                                 <div class="input-group flex-nowrap mb-3">
                                                                     <span class="input-group-text" id="addon-wrapping">Uloga</span>
@@ -481,7 +473,6 @@
                                                             </div>
                                                         </div>
                                                     </div>
-
                                                     <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
                                                         <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                                             <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
@@ -489,7 +480,6 @@
                                                         <span>&emsp;</span>
                                                         <span id="greske"></span>
                                                     </div>
-
                                                     <div class="col-12 mb-1 d-flex justify-content-end">
                                                         <div class="row">
                                                             <div class="col-12">
@@ -508,7 +498,6 @@
                                                             </div>
                                                         </div>
                                                     </div>
-
                                                     <div class="pt-1 mb-4">
                                                         <table id="korisnici" class="table table-bordered rounded-5 border-dark">
                                                             <thead>
