--- a/Online Shop/MojiProizvodi.html
+++ b/Online Shop/MojiProizvodi.html
@@ -122,14 +122,14 @@
                             if (k.Uloga == 2) uloga = "Administrator";
 
                             $("#korisnici > tbody").append('<tr><td>' + k.KorisnickoIme + '</td>' +
-                                                            '<td>' + k.Ime + '</td>' +
-                                                            '<td>' + k.Prezime + '</td>' +
-                                                            '<td>' + k.Pol + '</td>' +
-                                                            '<td>' + k.Email + '</td>' +
-                                                            '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
-                                                            '<td><b>' + uloga.toUpperCase() + '</b></td>' +
-                                                            '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
-                                                            '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
+                                '<td>' + k.Ime + '</td>' +
+                                '<td>' + k.Prezime + '</td>' +
+                                '<td>' + k.Pol + '</td>' +
+                                '<td>' + k.Email + '</td>' +
+                                '<td>' + new Date(k.DatumRodjenja).toLocaleDateString("en-GB") + '</td>' +
+                                '<td><b>' + uloga.toUpperCase() + '</b></td>' +
+                                '<td class="d-flex justify-content-center"><a class="btn btn-dark" href="Izmena.html?id=' + k.KorisnickoIme + '">Izmena</a>&emsp;' +
+                                '<a class="btn btn-danger" href="Brisanje.html?id=' + k.KorisnickoIme + '">Brisanje</a></td>' +
                                 '</tr>');
                         });
                     });
@@ -384,12 +384,10 @@
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li><a href="/" class="nav-link">Početna stranica</a></li>
-
                     <li id="pl">
                         <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
                         <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
                     </li>
-
                     <li id="profil">
                         <div class="btn-group profil-btn">
                             <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -398,7 +396,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
                                 <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
                                 <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
                             </ul>
                         </div>
@@ -422,18 +422,13 @@
                                                     <div class="d-flex mb-3 pb-1">
                                                         <span class="h1 fw-bold mb-0">Shopy Proizvodi</span>
                                                     </div>
-
                                                     <h5 class="fw-normal pb-3" style="letter-spacing: 1px;">Detalji i lista svih proizvoda koje ste objavili</h5>
-
                                                     <div class="pt-1 mb-3">
                                                         <a href="DodajProizvod.html" class="btn btn-dark btn-lg btn-block">➕ Dodavanje proizvoda</a>
                                                     </div>
-
                                                     <br />
-
                                                     <h5 class="fw-semibold" style="letter-spacing: 1px;">Prikaz i filtiriranje proizvoda na Shopy platformi</h5>
                                                     <p class="fw-normal pb-3" style="letter-spacing: 1px;">Moguće je proizovde filtrirati po statusu dostupnosti kao i sortirati ih po ponuđenim kriterijumima.</p>
-
                                                     <div id="divgreske" class="alert alert-dark d-flex align-items-center mb-4" role="alert">
                                                         <svg height="25" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                                             <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
@@ -441,7 +436,6 @@
                                                         <span>&emsp;</span>
                                                         <span id="greske"></span>
                                                     </div>
-
                                                     <div class="col-12 mt-3">
                                                         <div class="row justify-content-between">
                                                             <div class="col-4 d-flex">
@@ -452,7 +446,6 @@
                                                                     </label>
                                                                 </div>
                                                             </div>
-
                                                             <div class="col-5">
                                                                 <div class="input-group mb-3">
                                                                     <span class="input-group-text" id="addon-sort">Sortiranje proizovoda</span>
@@ -469,7 +462,6 @@
                                                             </div>
                                                         </div>
                                                     </div>
-
                                                     <div class="pt-1 mb-4">
                                                         <table id="korisnici" class="table table-bordered rounded-5 border-dark">
                                                             <thead>
