--- a/Online Shop/DodajProizvod.html
+++ b/Online Shop/DodajProizvod.html
@@ -131,7 +131,7 @@
 
             // azuriranje pregleda slike
             $("#slika").on('change', function () {
-                ("#pregled").src = URL.createObjectURL(event.target.files[0]);
+                pregled.src = URL.createObjectURL(slika.files[0]);
             });
 
             // cuvanje izmena
